Deployment_postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-deployment # Уникальное имя сервиса в пределах namespace
spec:
  replicas: 1 # количесвто реплик
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql-otus # имя контейнера в Docker
        image: 1alro1/otus_project:postgresql # путь до образа Docker
        volumeMounts:
        - name: postgresql-configmap
          mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: postgresql-configmap
          configMap:
            name: postgresql-configmap
