Service_postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service # Уникальное имя сервиса в пределах namespace
spec:
  selector:
    app: postgresql # Селектор, определяющий, какие поды включать в сервис согласно метке app в манифесте Deployment
  ports:
  - protocol: TCP # Протокол, используемый сервисом (TCP/UDP)
    port: 5434 # Порт на который принимается трафик внутри кластера k8s
    targetPort: 5432 # Порт на который направляется трафик для приложения/БД
    nodePort: 30875 # Порт на который принимается трафик снаружи кластера k8s
  type: NodePort
